Fixed dark mode colors and transitions.

--- a/src/components/DarkMode/_dark-mode.scss
+++ b/src/components/DarkMode/_dark-mode.scss
@@ -18,7 +18,7 @@
 
   font-size: var(--h4);
 
-  transition: calc(var(--speed-slow) * 5) ease-out;
+  transition: var(--speed-slow) ease-out;
   
   &:hover {
     background-color: var(--color-orange);
