--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -65,7 +65,7 @@ button {
 details {
   margin-bottom: 1rem;
   padding: 1rem;
-  background-color: rgb(225, 225, 225);
+  background-color: var(--color-grey);
   border-radius: .5rem;
   cursor: pointer;
 
